# gowebgpu

./: .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  cloudbuild.yaml  go.mod  go.sum  main.go
client/: BUILD.bazel  main.go  storage_buffer.go  types.go  uniform_buffer.go  wasmgpu_helpers.go
client/browser/: BUILD.bazel  browser.go
client/engine/: BUILD.bazel  buffer.go  buffer_options.go  compute_pass.go  engine.go  storage_buffer.go  types.go  uniform_buffer.go  wasmgpu_helpers.go
client/examples/battle/: BUILD.bazel  battle.go  compute.wgsl  render.wgsl
client/examples/boids/: BUILD.bazel  boids.go  compute.wgsl
client/structexporter/: BUILD.bazel  struct_exporter.go  struct_exporter_test.go
common/math32/: BUILD.bazel  math32.go  math32_test.go
common/vmath/: BUILD.bazel  vector2.go  vector2_test.go  vector3.go  vector4.go
common/wgsltypes/: BUILD.bazel  struct.go  struct_test.go
static/: BUILD.bazel  code.js  embed.go
static/shaders/: compute.wgsl  render.wgsl
templates/: index.html
