load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/hulkholden/gowebgpu
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

oci_load(
    name = "gowebgpu_load",
    image = ":image",
    repo_tags = ["gowebgpu:latest"],
)

filegroup(
    name = "gowebgpu_tarball",
    srcs = [":gowebgpu_load"],
    output_group = "tarball",
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/gowebgpu_linux"],
    tars = [":gowebgpu_layer"],
)

pkg_tar(
    name = "gowebgpu_layer",
    srcs = [":gowebgpu_linux"],
    extension = "tar.gz",
)

go_binary(
    name = "gowebgpu_linux",
    embed = [":gowebgpu_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gowebgpu",
    embed = [":gowebgpu_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gowebgpu_lib",
    srcs = ["main.go"],
    embedsrcs = ["templates/index.html"],
    importpath = "github.com/hulkholden/gowebgpu",
    visibility = ["//visibility:private"],
    deps = ["//static"],
)
