module(
    name = "gowebgpu",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "1.4.2")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "gazelle", version = "0.34.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:bc535c40cfde8f8f1601f6cc9b51d3387db0722a7c4756896c68e3de4f074966",
    image = "gcr.io/distroless/static",
)
use_repo(oci, "distroless_static")
