load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "client",
    embed = [":client_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/hulkholden/gowebgpu/client",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "//client/examples/battle",
        "@com_github_mokiat_wasmgpu//:wasmgpu",
    ],
)
