load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "engine_lib",
    srcs = [
        "buffer.go",
        "buffer_options.go",
        "compute_pass.go",
        "engine.go",
        "types.go",
        "wasmgpu_helpers.go",
    ],
    importpath = "github.com/hulkholden/gowebgpu/client/engine",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//client/browser",
        "//common/wgsltypes",
        "@com_github_mokiat_gog//opt",
        "@com_github_mokiat_wasmgpu//:wasmgpu",
    ],
)
