load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "structexporter",
    srcs = ["struct_exporter.go"],
    importpath = "github.com/hulkholden/gowebgpu/client/structexporter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "structexporter_test",
    srcs = ["struct_exporter_test.go"],
    embed = [":structexporter"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
