load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "boids",
    srcs = ["boids.go"],
    importpath = "github.com/hulkholden/gowebgpu/client/examples/boids",
    visibility = ["//visibility:public"],
    deps = [
        "//client/engine:engine_lib",
        "//common/vmath",
        "//common/wgsltypes",
        "@com_github_mokiat_gog//opt",
        "@com_github_mokiat_wasmgpu//:wasmgpu",
    ],
)
