load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "boids",
    srcs = ["boids.go"],
    embedsrcs = [
        "compute.wgsl",
        "render.wgsl",
    ],
    importpath = "github.com/hulkholden/gowebgpu/client/examples/boids",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//client/engine:engine_lib",
        "//common/vmath",
        "//common/wgsltypes",
        "@com_github_mokiat_gog//opt",
        "@com_github_mokiat_wasmgpu//:wasmgpu",
    ],
)
